--- a/relay_control.html
+++ b/relay_control.html
@@ -1,113 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ESP32 Firebase Relay Control</title>
+  <title>ESP32 Relay Control (Login)</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: white;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: linear-gradient(135deg, #74b9ff, #a29bfe);
+      color: #333;
       text-align: center;
-      padding: 40px;
+      margin: 0;
+      padding: 0;
     }
-    .login-box, .control-box {
-      background: #1e1e1e;
-      padding: 30px;
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .box {
+      background: white;
       border-radius: 15px;
-      display: inline-block;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-      margin-top: 50px;
+      padding: 40px;
       width: 320px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
     }
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
     input {
+      width: 90%;
       padding: 10px;
-      width: 85%;
       margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
       font-size: 16px;
-      border: none;
-      border-radius: 8px;
     }
+
     button {
-      padding: 10px 25px;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      background-color: #007bff;
+      background-color: #0984e3;
       color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s;
-      margin-top: 25px;
+      margin-top: 10px;
+      transition: background 0.3s;
     }
+
     button:hover {
-      background-color: #0056b3;
+      background-color: #0652dd;
     }
+
+    #status {
+      font-size: 20px;
+      margin: 20px 0;
+    }
+
+    /* Animated Toggle Switch */
     .switch {
       position: relative;
       display: inline-block;
       width: 80px;
       height: 40px;
-      margin-top: 35px;
-      margin-bottom: 30px;
+      margin: 20px 0;
     }
-    .switch input { display: none; }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
     .slider {
       position: absolute;
       cursor: pointer;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-color: #555;
-      transition: .4s;
+      inset: 0;
+      background-color: #ccc;
       border-radius: 40px;
+      transition: 0.4s;
     }
+
     .slider:before {
       position: absolute;
       content: "";
-      height: 32px; width: 32px;
-      left: 4px; bottom: 4px;
+      height: 30px;
+      width: 30px;
+      left: 5px;
+      bottom: 5px;
       background-color: white;
-      transition: .4s;
       border-radius: 50%;
+      transition: 0.4s;
     }
+
     input:checked + .slider {
       background-color: #00b894;
-      box-shadow: 0 0 10px #00b894;
     }
+
     input:checked + .slider:before {
       transform: translateX(40px);
     }
-    #status {
-      font-size: 22px;
+
+    .logout {
+      background-color: #d63031;
       margin-top: 20px;
+    }
+
+    .logout:hover {
+      background-color: #c0392b;
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="box" id="loginBox">
+      <h2>Login</h2>
+      <input type="text" id="username" placeholder="Username"><br>
+      <input type="password" id="password" placeholder="Password"><br>
+      <button onclick="login()">Login</button>
+      <p id="loginError" style="color:red;"></p>
+    </div>
 
-  <div class="login-box" id="loginBox">
-    <h2>🔐 Admin Login</h2>
-    <input type="text" id="username" placeholder="Username"><br>
-    <input type="password" id="password" placeholder="Password"><br>
-    <button onclick="login()">Login</button>
-    <p id="loginError" style="color:red; margin-top:10px;"></p>
+    <div class="box" id="controlBox" style="display:none;">
+      <h2>ESP32 Relay Control</h2>
+      <div id="status">Loading...</div>
+      <label class="switch">
+        <input type="checkbox" id="relayToggle">
+        <span class="slider"></span>
+      </label><br>
+      <button class="logout" onclick="logout()">Logout</button>
+    </div>
   </div>
 
-  <div class="control-box" id="controlBox" style="display:none;">
-    <h2>⚡ ESP32 Relay Control</h2>
-    <p id="status">Loading...</p>
-    <label class="switch">
-      <input type="checkbox" id="relayToggle">
-      <span class="slider"></span>
-    </label><br>
-    <button onclick="logout()">Logout</button>
-  </div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+    import { getDatabase, ref, onValue, set } 
+      from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
 
-  <!-- ✅ Firebase CDN SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-  <script>
-    // Firebase Config
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyAUm8E5LOgFK1WJGqMuwInTv740h2F6rgY",
       authDomain: "simple-relay-control.firebaseapp.com",
@@ -119,15 +155,16 @@
       measurementId: "G-KD2TQZ2Z0T"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    const relayRef = db.ref("relay");
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const relayRef = ref(db, "relay");
 
     const statusText = document.getElementById("status");
     const relayToggle = document.getElementById("relayToggle");
 
     // Login
-    function login() {
+    window.login = function() {
       const user = document.getElementById("username").value;
       const pass = document.getElementById("password").value;
 
@@ -137,27 +174,27 @@
       } else {
         document.getElementById("loginError").innerText = "Invalid username or password.";
       }
-    }
+    };
 
     // Logout
-    function logout() {
+    window.logout = function() {
       document.getElementById("controlBox").style.display = "none";
       document.getElementById("loginBox").style.display = "inline-block";
       document.getElementById("username").value = "";
       document.getElementById("password").value = "";
       document.getElementById("loginError").innerText = "";
-    }
+    };
 
-    // Firebase Relay Sync
-    relayRef.on("value", (snapshot) => {
+    // Listen to Firebase
+    onValue(relayRef, (snapshot) => {
       const state = snapshot.val();
       relayToggle.checked = state;
       statusText.innerHTML = state ? "Relay Status: ✅ ON" : "Relay Status: ❌ OFF";
     });
 
+    // Toggle relay
     relayToggle.addEventListener("change", () => {
-      const newState = relayToggle.checked;
-      relayRef.set(newState);
+      set(relayRef, relayToggle.checked);
     });
   </script>
 </body>
